--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@ div.desc {
 	</div>
 </div>
 <div class="container" style="padding-left: 75px">
-	<div class="row clearfix" style="background-color: #ffffff">
+	<div class="row clearfix">
 		<div class="col-md-12 column">
-			<div class="jumbotron">
+			<div class="jumbotron"  style="background-color: #ffffff">
 				<h2>
 					汪明城|<span style="font-size:14px">英文：wmck</span>
 				</h2>
