Change the text's location and images's size

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	width: 100%;
 }
 .carousel-caption {
-	padding-bottom: 150px;
+	padding-bottom: 200px;
 }
 p{
 	font-size: 16px;
@@ -236,7 +236,7 @@ div.desc {
 				</p>
 				</br>
 				<p>
-					 <a class="btn btn-primary btn-large" href="#">了解更多</a>
+					 <a href="#" style="font-size: 15px">More</a>
 				</p>
 			</div>
 		</div>
@@ -480,13 +480,13 @@ div.desc {
 			<p>
 				<strong>3.爱好思维构图，经常将刚学习的知识，用Xmind或A4纸，画思维图，加以理解与记忆。</strong>
 			</p>
-			<img src="images/a4.jpg"/>
+			<img src="images/a4.jpg" style="width: 1010px" />
 		</div>
 		<div class="col-md-12 column">
 			<p>
 				<strong>4.喜欢关注新鲜事物，关注GitHub上的开源项目，并分析过Bootstrap源码。</strong>
 			</p>
-			<img src="images/github.PNG"/>
+			<img src="images/github.PNG" style="width: 1010px" />
 		</div>
 		</div>
 	</div>
