Change the education's information

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ div.desc {
     	</br>
         <span class="glyphicon glyphicon-tag"><span style="font-size: 16px">教育背景：
         </br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2014.09-2018.06&nbsp;南华大学船山学院&nbsp;软件工程</br>
-        </br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2016.07-2016.08&nbsp;华信暑假训练营（技能培训）</span></span>
+        </br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2016.07-2016.08&nbsp;华信暑期夏令营（技能培训）</span></span>
     </div>
     </div>
     </div>
