Change the 'more' of font-size and color for index.html
The 'more' is a link to personal shows about a lots of tag for me.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ span{
 	width: 302px;
 	height: 121px;
 }
+
 </style>
 <style>
 /*作品展示*/
@@ -273,7 +274,7 @@ div.desc {
 				</p>
 				</br>
 				<p>
-					 <a href="#" style="font-size: 15px">More</a>
+				  <a href="#" style="font-size: 20px;color: #86BE51;">More</a>
 				</p>
 			</div>
 		</div>
