Add the experience of Java for index.html

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ div.desc {
 				</h2>
 				<p>
 				    男 本科 | 在校生</br></br>
-				    <span class="glyphicon glyphicon-bookmark"><span style="font-size: 16px">求职岗位：前端工程师</span></span> 
+				    <span class="glyphicon glyphicon-bookmark"><span style="font-size: 16px">求职岗位：前端工程师/Java工程师</span></span> 
                     
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <span class="glyphicon glyphicon-map-marker"><span style="font-size: 16px">工作地点：深圳，长沙，广州</span></span> 
@@ -396,7 +396,7 @@ div.desc {
     	</br>
         <p>2017.06.20-2017.06.30    湖南软测信息技术有限公司    前端开发工程师</p>
         </br>
-        <p>1.在项目组长的带领下，负责《权限管理系统》视图层的开发，编写javascript与javaWeb中的EL表达式相结合，实现了不同角色的权限控制及相关视图的显示。</p>
+        <p>1.在项目组长的带领下，负责《权限管理系统》视图层及授权功能的开发，编写javascript与javaWeb中的EL表达式相结合，并通过EL表达式的方式将后台逻辑数据返回给视图层，并通过Mysql中的角色状态置1或0，实现了不同角色的权限控制及相关视图的显示。</p>
         </br>
         </br>
         <img src="images/soft.PNG">
