Change the text of footer for index.html

--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@ div.desc {
       <li><a href="#">技术关注</a></li>
       <li><a href="#">创客空间</a></li>
       <li><a href="#">追根究底</a></li>
-      <li><a href="#">生活向往</a></li>
+      <li><a href="#">生活圈</a></li>
     </ul>
   </div>
   <div class="footer-nav">
