--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ div.desc {
 								<li class="divider">
 								</li>
 								<li>
-									 <a href="#campus">4.中南地区UI设计区域赛</a>
+									 <a href="#campus">4.《第十届中国大学生计算机设计大赛-中南地区赛》</a>
 								</li>
 							</ul>
 						</li>
@@ -209,7 +209,7 @@ div.desc {
 								<li class="divider">
 								</li>
 								<li>
-									 <a href="#project">4.2017.05 - 2017.08	《船山学院招生管理系统》	Java工程师</a>
+									 <a href="#project">4.2017.05 - 2017.08	《考生录取专业管理系统》	Java工程师</a>
 								</li>
 								
 							</ul>
@@ -226,7 +226,8 @@ div.desc {
 									 <a href="#awards"> 2. 2016.10 - 2016.12《2016年软件设计创意大赛》 优胜奖</a>
 								</li>
 								<li>
-									 <a href="#awards">3. 2015.03 - 2015.10《第十二届“挑战杯”全国大学生课外学术科技作品竞赛》 优胜奖 </a>
+									 <a href="#awards">3. 2015.03 - 2015.12《第七届南华大学“挑战杯”大学生课外学术科技作品竞赛》
+			                    院三等奖 </a>
 								</li>
 							</ul>
 						</li>
@@ -601,7 +602,7 @@ div.desc {
 			 </br>
 			 </br>
 			 《第七届南华大学“挑战杯”大学生课外学术科技作品竞赛》
-			 三等奖
+			 院三等奖
 			 <a href="#">查看作品</a>
 			</p>
 		</div>
@@ -640,7 +641,7 @@ div.desc {
 		</div>
 		<div class="col-md-12 column">
 			<p>
-				<strong>4.喜欢关注新鲜事物，关注<a href="https://github.com/wmck">GitHub(https://github.com/jettle)</a>上的开源项目，并分析过Bootstrap源码。</strong>
+				<strong>4.喜欢关注新鲜事物，关注<a href="https://github.com/jettle">GitHub(https://github.com/jettle)</a>上的开源项目，并分析过Bootstrap源码。</strong>
 				<span id="img-icon-github" class="glyphicon glyphicon-eye-open"  onclick="seeImgGithub();" style="color: green;
 	  cursor:pointer;">
 			</p>
