--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!项目经历：css冲突 ：（>
 <!DOCTYPE html>
 <html>
 <head>
@@ -108,6 +107,7 @@ div.desc {
 }
 </style>
 <style type="text/css">
+<!--尾页-->
   .footer{
     width: 100%;
     height:auto;
@@ -209,7 +209,7 @@ div.desc {
 								<li class="divider">
 								</li>
 								<li>
-									 <a href="#project">4.2017.05 - 2017.08	《考生录取专业管理系统》	Java工程师</a>
+									 <a href="#project">4.2017.06 - 2017.09	《考生录取专业管理系统》	Java工程师</a>
 								</li>
 								
 							</ul>
@@ -223,10 +223,10 @@ div.desc {
 									 <a href="#awards">1. 2017.05 - 2017.07《第十届中国大学生计算机设计大赛》中南地区赛 一等奖</a>
 								</li>
 								<li>
-									 <a href="#awards"> 2. 2016.10 - 2016.12《2016年软件设计创意大赛》 优胜奖</a>
+									 <a href="#awards"> 2. 2016.10 - 2017.03《2016年软件设计创意大赛》 优胜奖</a>
 								</li>
 								<li>
-									 <a href="#awards">3. 2015.03 - 2015.12《第七届南华大学“挑战杯”大学生课外学术科技作品竞赛》
+									 <a href="#awards">3. 2016.06 - 2016.12《第七届南华大学“挑战杯”大学生课外学术科技作品竞赛》
 			                    院三等奖 </a>
 								</li>
 							</ul>
@@ -235,7 +235,7 @@ div.desc {
 							 <a href="#" class="dropdown-toggle" data-toggle="dropdown">自我评价<strong class="caret"></strong></a>
 							<ul class="dropdown-menu">
 								<li>
-									 <a href="#comments">1.学习能力较强，“独立学习”</a>
+									 <a href="#comments">1.勤奋好学，广交圈友</a>
 								</li>
 								<li>
 									 <a href="#comments">2.善于总结，并且乐于分享</a>
@@ -258,9 +258,11 @@ div.desc {
 			<div class="carousel slide" id="carousel-941364">
 				<div class="carousel-inner">
 					<div class="item active">
-						<!img alt="" src="default.jpg" />			
+						<!img alt="" src="default.jpg" />
+						     <a href="views/myself.html">			
 				             <video  alt="" class="video-background" src="video/小孩歌词.mp4" autoplay="autoplay" loop="loop" type="video/mp4" style="width: 100%">       
                               </video>
+                              </a>
 						<div class="carousel-caption">
 							<h4>
 								Personal blog(jettle.github.io)
@@ -303,7 +305,7 @@ div.desc {
 				</p>
 				</br>
 				<p>
-				  <a href="#" style="font-size: 20px;color: #86BE51;">More</a>
+				  <a href="views/myself.html" style="font-size: 20px;color: #86BE51;">More</a>
 				</p>
 			</div>
 		</div>
@@ -356,8 +358,6 @@ div.desc {
 	<img src="images/hld1.PNG">
 	<img src="images/hld2.PNG">
 	</br>
-	<a href="hld.html">职业测评试题</a>
-     
     <h4 id="spen">3.就业领域</h4>
 	<h5 id="spen">3.1发展趋势</h5>
 	<p>
@@ -375,6 +375,7 @@ div.desc {
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	初级软件工程师——中/高级软件工程师。
 	</p>
+	<a href="views/myself.html">More</a>
 </div>
 </div>
 </div>
@@ -454,7 +455,7 @@ div.desc {
 		    <dl style="font-size: 16px">
 
 				<dt>
-					2015.04 - 2015.05	南华大学计算机科学与技术学院软件协会	技术部成员
+					2015.04 - 至今	南华大学计算机科学与技术学院软件协会	技术部成员
 				</dt>
 				</br>
 				<dd>
@@ -563,7 +564,7 @@ div.desc {
 		      <img src="images/csxy.PNG" alt="Northern Lights" width="600" height="400">
 		    </a>
 		    <div class="desc" style="padding-top: 55px;height: 256px">1.在4个伙伴的协作下，由于使用的是Spring MVC+Mybatis+Spring框架开发，所以主要负责的是编写Dao的数据逻辑接口，使用Mybatis的动态SQL,通过配置文件来操作Mysql数据库，实现了基本的“增”、“删”、“改”、“查”，同时减少了代码的冗余。
-		    <a class="btn" href="#" style="padding-top: 30px">2017.05 - 2017.08</a> <a class="btn btn-link" href="#" style="padding-top:30px">Java工程师</a>
+		    <a class="btn" href="#" style="padding-top: 30px">2017.06 - 2017.09</a> <a class="btn btn-link" href="#" style="padding-top:30px">Java工程师</a>
 		    </p></div>
 		  </div>
 		</div>
@@ -589,7 +590,7 @@ div.desc {
 			</p>
 			</br>
 			<p>
-			 2.  2016.10 - 2016.12
+			 2.  2016.10 - 2017.03
 			 </br>
 			 </br>
 			 《2016年软件设计创意大赛》
@@ -598,7 +599,7 @@ div.desc {
 			</p>
 			</br>
 			<p>
-			 2.  2016.05 - 2016.12
+			 2.  2016.06 - 2017.12
 			 </br>
 			 </br>
 			 《第七届南华大学“挑战杯”大学生课外学术科技作品竞赛》
@@ -617,7 +618,7 @@ div.desc {
 		</h2>
 		<div class="col-md-12 column">
 			<p>
-				<strong>1.学习能力较强，“独立学习”，在<a href="http://www.imooc.com/u/2522974">慕课网:(http://www.imooc.com/u/2522974)</a>（的学习时长599.3小时 （35958分钟）。</strong>
+				<strong>1.勤奋好学，广交圈友，在<a href="http://www.imooc.com/u/2522974">慕课网:(http://www.imooc.com/u/2522974)</a>（的学习时长599.3小时 （35958分钟）。</strong>
 				<span id="img-icon-study" class="glyphicon glyphicon-eye-open"  onclick="seeImgStudy();" style="color: green;
 	  cursor:pointer;">
 			</p>
@@ -650,7 +651,7 @@ div.desc {
 		</div>
 	</div>
 </div>
-<div class="footer">
+<div class="footer" style="background-color: #2B2B2B">
 <div>
   <div class="footer-nav">
     <ul class="footer-title">
