--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ div.desc {
 								<li class="divider">
 								</li>
 								<li>
-									 <a href="#project">4.2017.06 - 2017.09	《考生录取专业管理系统》	Java工程师</a>
+									 <a href="#project">4.2017.07 - 2017.08	《考生录取专业管理系统》	Java工程师</a>
 								</li>
 								
 							</ul>
@@ -255,6 +255,7 @@ div.desc {
 				</div>
 			</nav>
 
+
 			<div class="carousel slide" id="carousel-941364">
 				<div class="carousel-inner">
 					<div class="item active">
@@ -273,6 +274,59 @@ div.desc {
 						</div>
 					</div>
 				</div> 
+			</div>
+
+		</div>
+	</div>
+</div>
+
+<div class="container">
+	<div class="row clearfix">
+		<div class="col-md-12 column">
+			<div class="carousel slide" id="carousel-498952">
+				<ol class="carousel-indicators">
+					<li class="active" data-slide-to="0" data-target="#carousel-498952">
+					</li>
+					<li data-slide-to="1" data-target="#carousel-498952">
+					</li>
+					<li data-slide-to="2" data-target="#carousel-498952">
+					</li>
+				</ol>
+				<div class="carousel-inner">
+					<div class="item active">
+						<img alt="" src="views/small.png" />
+						<div class="carousel-caption">
+							<h4>
+								First Thumbnail label
+							</h4>
+							<p>
+								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+							</p>
+						</div>
+					</div>
+					<div class="item">
+						<img alt="" src="v3/default1.jpg" />
+						<div class="carousel-caption">
+							<h4>
+								Second Thumbnail label
+							</h4>
+							<p>
+								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+							</p>
+						</div>
+					</div>
+					<div class="item">
+						<img alt="" src="v3/default2.jpg" />
+						<div class="carousel-caption">
+							<h4>
+								Third Thumbnail label
+							</h4>
+							<p>
+								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+							</p>
+						</div>
+					</div>
+				</div> <a class="left carousel-control" href="#carousel-498952" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control" href="#carousel-498952" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
 			</div>
 		</div>
 	</div>
@@ -419,18 +473,19 @@ div.desc {
 		</br>
 		<div class="col-md-3 column">
 		    <div class="icon">
-			     <img src="images/ZTE.PNG" style="padding-left: 45%;padding-left: 25%;padding-top: 25px;">
+			     <img src="images/ZTE.PNG" style="padding-left: 7%;padding-top: 25px;">
 			</div>
 			<dl style="font-size: 16px">
 			</br>
 				<dt>
-					2016.10 - 2016.11	衡阳中兴网信科技有限公司	Java见习生
+					2015.04 - 2015.05	衡阳中兴网信科技有限公司	Java见习生
 				</dt> 
 				</br>
 				<dd>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.了解了“衡阳中兴网信科技有限公司”研发部现有项目及工作内容，参加了《“中兴杯”App创意作品大赛》，并获取了一个共同运营校园App-“校青葱”的机会。
 				</dd>
-				</dl>
+		    </dl>
+		    <a href="views/zte.html">了解更多</a>
 		</div>
 		<div class="col-md-3 column">
 		    <div class="icon">
@@ -443,9 +498,11 @@ div.desc {
 				</dt>
 				</br>
 				<dd>
+				</br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.形式：代表Boom工作室参加了《“乐易考杯”湖南省“互联网+”大学生就业创业大赛》，独自编辑6500字的《创新创业计划书》—“智能便携式电动滑板”。
 				</dd>
 		    </dl>
+		    <a href="views/boom.html">了解更多</a>
 		</div>
 		</br>
 		<div class="col-md-3 column">
@@ -459,9 +516,11 @@ div.desc {
 				</dt>
 				</br>
 				<dd>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.参与ACM程序设计，受邀参加《衡阳师范大学ACM邀请赛》，排名前35%。
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.在校期间，参与ACM程序设计，受邀参加《衡阳师范大学ACM邀请赛》，排名前35%。
 				</dd>
 			</dl>
+			</br>
+			<a href="views/acm.html">了解更多</a>
 		</div>
 		<div class="col-md-3 column">
 		    <div class="icon">
@@ -473,9 +532,11 @@ div.desc {
 				</dt> 
 				</br>
 				<dd>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.使用PS工具并结合团队的集体灵感，设计出的作品：《末日:倒计时》，在中南区域赛中获得一等奖。
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.凝聚团队的集体智慧与灵感，设计出的作品：《末日:倒计时》，在中南区域赛中获得一等奖。
 				</dd>
-				</dl>
+			</dl>
+			</br>
+			<a href="views/sig.html">了解更多</a>
 		</div>	
 	</div>
    </div>
@@ -487,20 +548,20 @@ div.desc {
     	</br>
         <p>2017.06.20-2017.06.30&nbsp;&nbsp;湖南软评信息技术有限公司&nbsp;&nbsp;Java开发工程师</p>
         </br>
-        <p>1.项目描述：</p>
-        <p>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        经过《权限管理系统》系统注册的员工，可以进行日常的工作考勤，管理员具有最高权限，可以管理整个系统的功能，包括：授予权限、增删改查菜单、增删改查角色及考勤管理。
-        </p>
-        <p>2.开发环境：</p>
+        <p>1.开发环境：</p>
         <p>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         Windows 8.1 x64/MyEclipse 10/Tomcat 7/JDK 7。
         </p>
-        <p>3.核心技术：</p>
+        <p>2.核心技术：</p>
         <p>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         Html5/Css3/JavaScript/JQuery/EasyUI/Bootstrap/JavaWeb/Spring/SpringMVC/Mybatis。
+        </p>
+        <p>3.项目描述：</p>
+        <p>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        经过《权限管理系统》系统注册的员工，可以进行日常的工作考勤，管理员具有最高权限，可以管理整个系统的功能，包括：授予权限、增删改查菜单、增删改查角色及考勤管理。
         </p>
         <p>4.项目职责：</p>
         <p>
@@ -523,11 +584,11 @@ div.desc {
     <div class="col-md-3 column">
 	   <div class="responsive">
        <div class="img">
-          <a target="_blank" href="#">
+          <a target="_blank" href="views/small.html">
           <img src="images/search.PNG" alt="Northern Lights" width="600" height="400">
           </a>
        <div class="desc" style="padding-top: 50px;height: 248px">1.在收集大量调查问卷后，主要负责java开发，以JavaWeb形式开发，使用Java Excel Api采集“个人受骗几率表”数据进行逻辑处理，“个人信息”与“个人受骗几率表”比对，能够准确获得个人受骗概率。
-          <a class="btn" href="#" style="float: left;padding-top: 45px">2016.12 - 2017.01	</a> <a class="btn btn-link" href="#" style="padding-top: 45px">Java研发工程师</a>
+          <a class="btn" href="views/small.html" style="float: left;padding-top: 45px">2016.12 - 2017.01	</a> <a class="btn btn-link" href="views/small.html" style="padding-top: 45px">Java研发工程师</a>
           </p>
        </div>
        </div>
@@ -536,11 +597,11 @@ div.desc {
 	<div class="col-md-3 column">
 	    <div class="responsive">
 		  <div class="img">
-		    <a target="_blank" href="#">
+		    <a target="_blank" href="views/iuesc.html">
 		      <img src="images/iuesc.PNG" alt="Northern Lights" width="600" height="400">
 		    </a>
-		    <div class="desc" style="padding-top: 30px">1.在团队协作中，主要负责《iUESC》网页的编码部分，并结合bootstrap，实现了响应式布局；使用html5的video标签替代flash；index.html代码1688行，任课老师奖励一本《动态网站开发教程（Dreamweaver+Mysql+PHP）》作为鼓励。
-		    <a class="btn" href="#" style="float: left;"></br>2016.11 - 2016.12</a> <a class="btn btn-link" href="#">前端开发工程师</a>
+		    <div class="desc" style="padding-top: 30px">1.在团队协作中，主要负责《iUESC》网页的编码部分，并结合bootstrap，实现了响应式布局；使用html5的video标签替代flash；JavaScript实现侧栏动态效果，使用HTML5+CSS3优化了部分JavaScript代码；实现了不同功能同样的动态效果。
+		    <a class="btn" href="views/iuesc.html" style="float: left;"></br>2016.11 - 2016.12</a> <a class="btn btn-link" href="views/iuesc.html" style="padding-top: 26px">前端开发工程师</a>
 		    </p></div>
 		  </div>
 		</div>
@@ -548,11 +609,11 @@ div.desc {
 	<div class="col-md-3 column">
 	  <div class="responsive">
 		  <div class="img">
-		    <a target="_blank" href="#">
+		    <a target="_blank" href="views/usc.html">
 		      <img src="images/new.PNG" alt="Northern Lights" width="600" height="400">
 		    </a>
 		    <div class="desc" style="height: 218px">1.在对旧版系统进行重构时，负责重构代码，首次使用MVC框架，对旧版《新闻发布系统》进行了整改，解决了文件结构不清晰、代码冗余等问题，使其逻辑分明，运行效率大幅提高。
-		    <a class="btn" href="#" style="float: left;padding-top: 50px"></br>2016.11 - 2016.02</a> <a class="btn btn-link" href="#" style="padding-top: 50px">PHP工程师</a>
+		    <a class="btn" href="views/usc.html" style="float: left;padding-top: 50px"></br>2016.11 - 2016.02</a> <a class="btn btn-link" href="views/usc.html" style="padding-top: 50px">PHP工程师</a>
 		    </p></div>
 		  </div>
 		</div>
@@ -560,11 +621,11 @@ div.desc {
 	<div class="col-md-3 column">
 		<div class="responsive">
 		  <div class="img">
-		    <a target="_blank" href="#">
+		    <a target="_blank" href="views/csxy.html">
 		      <img src="images/csxy.PNG" alt="Northern Lights" width="600" height="400">
 		    </a>
-		    <div class="desc" style="padding-top: 55px;height: 256px">1.在4个伙伴的协作下，由于使用的是Spring MVC+Mybatis+Spring框架开发，所以主要负责的是编写Dao的数据逻辑接口，使用Mybatis的动态SQL,通过配置文件来操作Mysql数据库，实现了基本的“增”、“删”、“改”、“查”，同时减少了代码的冗余。
-		    <a class="btn" href="#" style="padding-top: 30px">2017.06 - 2017.09</a> <a class="btn btn-link" href="#" style="padding-top:30px">Java工程师</a>
+		    <div class="desc" style="padding-top: 55px;height: 256px">1.在团队的协作下，《考生录取专业确认系统》基于Spring MVC+Mybatis+Spring框架开发，所以主要负责的是编写Dao的数据逻辑接口，使用Mybatis的动态SQL,通过配置文件来操作Mysql数据库，实现了基本的增/删/改/查，同时减少了代码的冗余。
+		    <a class="btn" href="views/csxy.html" style="padding-top: 30px">2017.07 - 2017.08</a> <a class="btn btn-link" href="views/csxy.html" style="padding-top:30px">Java工程师</a>
 		    </p></div>
 		  </div>
 		</div>
