Update the shuffing images of index.html
1.Change the images to show some programs.
2.Add the url for images belong to index.html.

--- a/index.html
+++ b/index.html
@@ -12,24 +12,16 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <style type="text/css">
-	.clearfix{
-	margin-right: -125px;
-	margin-left: -125px;
-}
-.video-background-home{
-	margin-top: 50px;
-}
-.video-background{
-	width: 100%;
-}
+
+
 .carousel-caption {
-	padding-bottom: 200px;
+
 }
 p{
 	font-size: 16px;
 }
 .column{
-    padding-top: 50px;
+    padding-top:25px;
 }
 /*
 span{
@@ -153,12 +145,12 @@ div.desc {
 <div class="container">
 	<div class="row clearfix">
 		<div class="col-md-12 column" style="padding-right: 0px">
-			<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+			<nav  class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 			<div class="container-fluid">
 				<div class="navbar-header">
                     <!--button-->
 					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> 
-					 <a class="navbar-brand" href="#">汪明城(jettle-乔特)</a>
+					 <a class="navbar-brand" href="index.html">汪明城(jettle-乔特)</a>
 				</div>
 				
 				<div class="collapse navbar-collapse" id="myNavbar">
@@ -254,35 +246,13 @@ div.desc {
 				</div>	
 				</div>
 			</nav>
-
-
-			<div class="carousel slide" id="carousel-941364">
-				<div class="carousel-inner">
-					<div class="item active">
-						<!img alt="" src="default.jpg" />
-						     <a href="views/myself.html">			
-				             <video  alt="" class="video-background" src="video/小孩歌词.mp4" autoplay="autoplay" loop="loop" type="video/mp4" style="width: 100%">       
-                              </video>
-                              </a>
-						<div class="carousel-caption">
-							<h4>
-								Personal blog(jettle.github.io)
-							</h4>
-							<p>
-								You can use the editor on GitHub to maintain and preview the content for your website in Markdown files.
-							</p>
-						</div>
-					</div>
-				</div> 
-			</div>
-
 		</div>
 	</div>
 </div>
 
-<div class="container">
+<div class="container" style="width: 100%">
 	<div class="row clearfix">
-		<div class="col-md-12 column">
+		<div class="col-md-12 column" style="padding-left: 0px;padding-right: 0px">
 			<div class="carousel slide" id="carousel-498952">
 				<ol class="carousel-indicators">
 					<li class="active" data-slide-to="0" data-target="#carousel-498952">
@@ -291,38 +261,89 @@ div.desc {
 					</li>
 					<li data-slide-to="2" data-target="#carousel-498952">
 					</li>
+					<li data-slide-to="3" data-target="#carousel-498952">
+					</li>
+					<li data-slide-to="4" data-target="#carousel-498952">
+					</li>
+					<li data-slide-to="5" data-target="#carousel-498952">
+					</li>
 				</ol>
 				<div class="carousel-inner">
 					<div class="item active">
-						<img alt="" src="views/small.png" />
+						<a href="views/iuesc.html">
+						<img alt="0" src="images/iuesc2.jpg" />
+						</a>
 						<div class="carousel-caption">
 							<h4>
-								First Thumbnail label
+								《iUESC》— Ultimate Education of south china
 							</h4>
 							<p>
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;《iUESC》— Ultimate Education of south china是一个在线教学网站，以计算机科学与技术为主，包括：原创作品的发布、报酬比例的增长、直播教学、科技资讯及前辈在线指导。 
 							</p>
 						</div>
 					</div>
 					<div class="item">
-						<img alt="" src="v3/default1.jpg" />
+					<a href="views/csxy.html">
+                        <img alt="1" src="images/csxy2.jpg" />
+                        </a>
 						<div class="carousel-caption">
 							<h4>
-								Second Thumbnail label
+								《考生录取专业确认系统》
 							</h4>
 							<p>
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;此系统的实现，可以使湖南考生实现网上更换和确认专业信息，同时方便老师在线管理；由于部分考生虽然投档至我校，但其可能出于各种原因（如：错投、调剂不满意、家庭变故等等），考生不能到校就读，以往的方式是分工分批拨打考生电话，来确认考生是否就读我校，而此系统则是优化招生方式，减少人力资源的投入，以考生的网站操作为依据，来确认考生的就读意愿，此项目已成功部署运营，并圆满完成了2017年8月份的招生任务。
 							</p>
 						</div>
 					</div>
 					<div class="item">
-						<img alt="" src="v3/default2.jpg" />
+						<a href="views/usc.html">
+						<img alt="2" src="images/usc2.jpg" />
+						</a>
 						<div class="carousel-caption">
 							<h4>
-								Third Thumbnail label
+								新版《新闻管理系统》
 							</h4>
 							<p>
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;此项目是一个新闻发布系统，能够自由编辑、发布文章，由前端和后端两大部分构成，前端部分主要是网页布局及文章的分布，后端主要是管理用户、管理员及文章，包括：编辑、删除、增加用户及管理员，编辑、删除及发布文章。 
+							</p>
+						</div>
+					</div>
+					<div class="item">
+                        <a href="#practices">
+						<img alt="3" src="images/practice.jpg" />
+						</a>
+						<div class="carousel-caption">
+							<h4>
+								《企业信息管理系统》
+							</h4>
+							<p>
+								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;首先，经过《权限管理系统》系统注册的员工，可以进行日常的工作考勤，管理员具有最高权限，可以管理整个系统的功能，包括：授予权限、增删改查菜单、增删改查角色及考勤管理。  
+							</p>
+						</div>
+					</div>
+					<div class="item">
+					    <a href="views/small.html">
+						<img alt="4" src="images/small.png" />
+						</a>
+						<div class="carousel-caption" id="small">
+							<h4>
+								《个人受骗几率检测小程序》
+							</h4>
+							<p id="small-text">
+								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在参加《第七届南华大学“挑战杯”大学生课外学术科技作品竞赛》的过程中，我们研究的课题是“大学生对诈骗的判断意识和受骗几率的调查与对策分析”，基于大量的问卷调查，因此，“个人受骗几率检测小程序”则是在以上背景下开发的，此小程序需要被测者填写一份简短的调查内容，然后程序已经被测者的“数据”与问卷调查数据库中的“数据”对比，继而计算出此位被测者的受骗概率。 
+							</p>
+						</div>
+					</div>
+					<div class="item">
+					<a href="https://github.com/jettle">
+                        <img alt="5" src="images/bak.png" />
+                        </a>
+						<div class="carousel-caption">
+							<h4>
+								欢迎来到Jettle的Github主页
+							</h4>
+							<p>
+								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在Github主页，主要介绍了一些开发者的基本信息，也收藏了感兴趣的开源项目。
 							</p>
 						</div>
 					</div>
@@ -333,7 +354,7 @@ div.desc {
 </div>
 
 <div class="container" style="padding-left: 35px">
-	<div class="row clearfix">
+	<div class="row clearfix" style="margin-left: -125px">
 		<div class="col-md-12 column" id="info" >
 			<div class="jumbotron"  style="background-color: #ffffff">
 				<h3>
@@ -364,7 +385,7 @@ div.desc {
 			</div>
 		</div>
 	</div>
-	<div class="row clearfix" id="career-planning">
+	<div class="row clearfix" id="career-planning" style="margin-left: -125px;margin-right: -125px">
 	<div class="col-md-12 column" style="margin-left: 5px">
     <div style="margin-bottom: 50px">
 
@@ -397,14 +418,14 @@ div.desc {
 </nav>
 <div data-spy="scroll" data-target="#navbar-example" data-offset="0" 
 	 style="height:500px;overflow:auto; position: relative;">
-	<h4 id="ps">1.*说明</h4>
+	<h4 id="ps" style="padding-top: 50px">1.*说明</h4>
 	<p>	
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	此份“个人职业规划”简洁的概括了未来的短期规划，在此依据自身综合条件，结合科学技术的发展趋势，作出1-2年的职业规划，由于技术更新迭代的速度较快，因此，此份“个人职业规划”应呈现“动态性” ‎。
 	</br>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2015‎-07‎-21‎ ‏‎23:29:04
 	</p>
-	<h4 id="hld">2.霍兰德职业测试</h4>
+	<h4 id="hld" style="padding-top: 50px">2.霍兰德职业测试</h4>
 	<p>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     霍兰德职业兴趣测试完整版测试由美国著名职业指导专家霍兰德编制，主要用于确定被测试者的职业兴趣倾向,进而用于指导被测试者选择适合自身职业兴趣的专业发展方向和职业发展方向。霍兰德提出的6种基本职业类型为：实用型R、研究型I、艺术型A、社会型S、企业型E、常规型C。
@@ -413,18 +434,18 @@ div.desc {
 	<img src="images/hld2.PNG">
 	</br>
     <h4 id="spen">3.就业领域</h4>
-	<h5 id="spen">3.1发展趋势</h5>
+	<h5 id="spen" style="padding-top: 50px">3.1发展趋势</h5>
 	<p>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     在此我们有经历过移动互联网时代、“互联网+”大浪潮、O2O模式、智能家居及VR/AR技术，而目前的“共享单车”也是互联网发展的产物，随着国内现有的技术、网络等条件不断完善，金融、电信、电力、石油、政府等传统上软件行业的重要客户，都走上了数据集中的道路，开始拥抱云计算；软件行业也表现出国际化，随着经济全球化的进一步推进、中国加入WTO，中国软件业将面临更加广阔的国际市场以及前所未有的走出去的发展机会。
 
 	</p>
-	<h5 id="job">3.2职位</h5>
+	<h5 id="job" style="padding-top: 50px">3.2职位</h5>
 	<p>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	Java研发工程师。
 	</p>
-	<h5 id="dream">3.3目标</h5>
+	<h5 id="dream" style="padding-top: 50px">3.3目标</h5>
 	<p>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	初级软件工程师——中/高级软件工程师。
@@ -435,7 +456,7 @@ div.desc {
 </div>
 </div>
     </tr>
-	<div class="row clearfix" id="skills">
+	<div class="row clearfix" id="skills" style="margin-left:-125px;margin-right: -125px">
 	    <div class="col-md-12 column">
 	    <h2>
 		    个人技能|<span>Per</span>so<span>n's</span> Sk<span>il</span>ls</br><span>___</span>
@@ -467,7 +488,7 @@ div.desc {
 		</div>
 		</div>
 	</div>
-	<div class="row clearfix" id="campus" style="margin-bottom: 100px;">
+	<div class="row clearfix" id="campus" style="margin-bottom: 100px;margin-left:-125px;margin-right: -125px">
 	   <div class="col-md-12 column" style="margin-left: -15px">
 		<h2>校内经历|<span>Ca</span>m<span>pu</span>s's Ex<span>per</span>ie<span>n</span>ce</br><span>___</span></h2>
 		</br>
@@ -540,7 +561,7 @@ div.desc {
 		</div>	
 	</div>
    </div>
-   	<div class="row clearfix" id="practices">
+   	<div class="row clearfix" id="practices" style="margin-bottom: 100px;margin-left:-125px;margin-right: -125px">
 	<div class="col-md-12 column">
     <div style="margin-bottom: 50px">
     	<h2>实习经历|In<span>ter</span>ns<span>hi</span>p ex<span>per</span>ie<span>nc</span>e</br><span>___</span></h2>
@@ -561,7 +582,7 @@ div.desc {
         <p>3.项目描述：</p>
         <p>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        经过《权限管理系统》系统注册的员工，可以进行日常的工作考勤，管理员具有最高权限，可以管理整个系统的功能，包括：授予权限、增删改查菜单、增删改查角色及考勤管理。
+        经过《企业信息管理系统》系统注册的员工，可以进行日常的工作考勤，管理员具有最高权限，可以管理整个系统的功能，包括：授予权限、增删改查菜单、增删改查角色及考勤管理。
         </p>
         <p>4.项目职责：</p>
         <p>
@@ -576,8 +597,9 @@ div.desc {
     </div>
     </div>
 </div>
+<!--项目经历-->
 <div id="project" class="container" style="padding-left: 15px">
-	<div class="row clearfix">
+	<div class="row clearfix" style="margin-bottom: 100px;margin-left:-125px;margin-right: -125px">
 	<div class="col-md-12 column">
 	<h2>项目经历|<span>Pro</span>gr<span>a</span>m's Ex<span>per</span>ie<span>nc</span>e</br><span>___</span></h2>
     </br>
@@ -632,7 +654,7 @@ div.desc {
 	</div>
 	</div>
 </div>
-<div class="row clearfix" id="awards">
+<div class="row clearfix" id="awards" style="margin-bottom: 100px;margin-left:-125px;margin-right: -125px">
 	    <div class="col-md-12 column">
 	    <h2>
 		    获奖情况|Si<span>tua</span>ti<span>o</span>n <span>of</span> aw<span>ard</span>s
@@ -646,8 +668,29 @@ div.desc {
 			 1.  2017.05 - 2017.07
 			 </br>
 			 </br>《第十届中国大学生计算机设计大赛》中南地区赛
-			  一等奖。
-			 <a href="#">查看作品</a>
+			 一等奖。
+			 <a id="modal-58602" href="#modal-container-58602" role="button" class="btn" data-toggle="modal">查看作品</a>
+			<div class="modal fade" id="modal-container-58602" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+							<h4 class="modal-title" id="myModalLabel">
+								《第十届中国大学生计算机设计大赛》中南地区赛
+			     一等奖。
+							</h4>
+						</div>
+						<div class="modal-body">
+							1.由于此作品属于原创作品，涉及版权问题，为尊重个人隐私，不予公示，敬请谅解。
+							</br>
+							2.可待面试时查看证书复印件及作品。
+						</div>
+						<div class="modal-footer">
+							 <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button> <button type="button" class="btn btn-primary">保存</button>
+						</div>
+					</div>	
+				</div>
+			</div>
 			</p>
 			</br>
 			<p>
@@ -656,7 +699,27 @@ div.desc {
 			 </br>
 			 《2016年软件设计创意大赛》
 			 优胜奖
-			 <a href="#">查看作品</a>
+			<a id="modal-58602" href="#modal-container-58603" role="button" class="btn" data-toggle="modal">查看作品</a>
+			<div class="modal fade" id="modal-container-58603" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+							<h4 class="modal-title" id="myModalLabel">
+								《2016年软件设计创意大赛》优胜奖
+							</h4>
+						</div>
+						<div class="modal-body">
+							1.由于此作品属于原创作品，涉及版权问题，为尊重个人隐私，不予公示，敬请谅解。
+							</br>
+							2.可待面试时查看证书复印件及作品。
+						</div>
+						<div class="modal-footer">
+							 <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button> <button type="button" class="btn btn-primary">保存</button>
+						</div>
+					</div>	
+				</div>
+			</div>
 			</p>
 			</br>
 			<p>
@@ -665,12 +728,32 @@ div.desc {
 			 </br>
 			 《第七届南华大学“挑战杯”大学生课外学术科技作品竞赛》
 			 院三等奖
-			 <a href="#">查看作品</a>
+			 <a id="modal-58602" href="#modal-container-58604" role="button" class="btn" data-toggle="modal">查看作品</a>
+			<div class="modal fade" id="modal-container-58604" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+							<h4 class="modal-title" id="myModalLabel">
+								《第七届南华大学“挑战杯”大学生课外学术科技作品竞赛》院三等奖
+							</h4>
+						</div>
+						<div class="modal-body">
+							1.由于此作品属于原创作品，涉及版权问题，为尊重个人隐私，不予公示，敬请谅解。
+							</br>
+							2.可待面试时查看证书复印件及作品。
+						</div>
+						<div class="modal-footer">
+							 <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button> <button type="button" class="btn btn-primary">保存</button>
+						</div>
+					</div>	
+				</div>
+			</div>
 			</p>
 		</div>
 		</div>
 	</div>
-<div class="row clearfix" id="comments">
+<div class="row clearfix" id="comments" style="margin-bottom: 100px;margin-left:-125px;margin-right: -125px">
 	    <div class="col-md-12 column" style="margin-left: 2px">
 	    <h2>
 		    自我评价|S<span>el</span>f-as<span>ses</span>sm<span>en</span>t
